--- a/Project 1 mobile:tablet design/event-exhibition.css
+++ b/Project 1 mobile:tablet design/event-exhibition.css
@@ -10,6 +10,7 @@ body {
     overflow: hidden;
     background-color: white;
     position: relative;
+
 }
 
 
@@ -20,6 +21,8 @@ body {
     margin: 90px 0px 0px 0px;
     background-color: white;
     display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+
 
 }
 
@@ -32,6 +35,7 @@ body {
     font-size: 9px;
     display: block;
     text-align: center;
+    font-family: "Mukta";
 }
 
 
@@ -49,6 +53,31 @@ body {
     left: 0;
     top: 0;
 }
+
+
+/*
+.button{
+    float: right;
+    background-color: white;
+    border: none;
+    color: white;
+    padding: 8px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 30px 40px 0px 0px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.button1 {
+  background-color: white;
+  color: grey;
+  border: 1px solid #e7e7e7;
+}
+
+.button1:hover {background-color: #e7e7e7;}
+*/
 
 .active {
     text-align: center;
@@ -74,10 +103,13 @@ a:hover {
 
 
 
+
+
 p {
     font-size: 13px;
     line-height: 150%;
     letter-spacing: 1.5px;
+    font-family: "Source Serif Pro";
 }
 
 h1 {
@@ -95,6 +127,7 @@ h2 {
     font-size: 7px;
     color: gray;
     letter-spacing: 2px;
+    font-family:"Karla";
 }
 
 
@@ -106,13 +139,14 @@ h4{
 }
 
 h5 {
-    font-size: 11px;
-    line-height: 140%;
+    font-size: 10.5px;
+    font-family:"Karla";
     letter-spacing: 0.5px;
-    line-height: 180%;
+    line-height: 210%;
     padding: 0px 0px 40px 0px;
     border-bottom: solid grey;
     border-width: 1px;
+    
     
 }
 
