--- a/Project 1 mobile:tablet design/event.css
+++ b/Project 1 mobile:tablet design/event.css
@@ -9,7 +9,8 @@ body {
     height: 90px;
     overflow: hidden;
     background-color: white;
-    position: relative;
+    position: fixed;
+
 }
 
 .topnav #myLinks {
@@ -19,6 +20,8 @@ body {
     margin: 90px 0px 0px 0px;
     background-color: white;
     display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+
 
 }
 
@@ -27,10 +30,12 @@ body {
     margin-top: 30px;
     padding: 30px 0px -10px 0px;
     text-decoration: none;
-    font-size: 9px;
+    font-size: 10px;
+    font-family: "Mukta";
     display: block;
     text-align: center;
 }
+
 
 
 .topnav a {
@@ -63,8 +68,8 @@ a:hover {
 
 
 p {
-    font-size: 13px;
-    line-height: 120%;
+    font-size: 12.8px;
+    line-height: 125%;
     letter-spacing: 1px;
 }
 
@@ -83,7 +88,8 @@ h3 {
     letter-spacing: 3px;
     padding: 0px 0px 25px 0px;
     border-bottom: solid grey;
-    border-width: 0.1px;
+    border-width: .5px;
+    font-family:"Karla";
 }
 
 h4 {
@@ -91,6 +97,8 @@ h4 {
     color: black;
     text-align: left;
     letter-spacing: 5px;
+    font-family: "Source Serif Pro";
+    
 }
 
 .events {
@@ -132,7 +140,7 @@ h4 {
 
 .blocks1 a {
     text-decoration: none;
-    color: red;
+    color: black;
 }
 
 .blocks1-event {
@@ -160,6 +168,8 @@ h4 {
 }
 
 .blocks1-img2 {
+    margin: 10px 0px 0px 0px;
+    padding: 0px 20px 0px 0px;
     grid-area: i4-1;
 }
 
@@ -173,8 +183,8 @@ h4 {
 }
 
 .blocks1-img3 {
+    padding: 20px 20px 0px 0px;
     align-items: center;
-
     grid-area: i4-2;
 }
 
@@ -225,13 +235,13 @@ h4 {
 
 
     .im1 {
-        padding: 0px 50px 0px 0px;
+        padding: 0px 20px 0px 0px;
         float: right;
         width: 50%;
     }
 
     .im2 {
-        padding: 0px 50px 0px 0px;
+        padding: 0px 30px 0px 0px;
         float: right;
         width: 40%;
     }
@@ -239,14 +249,14 @@ h4 {
     .im3 {
         padding: 0px 50px 0px 0px;
         float: right;
-        width: 40%;
+        width: 35%;
     }
 
     h3 {
         font-size: 7.5px;
     }
-    
-    h1{
+
+    h1 {
         font-size: 8px;
     }
 
