--- a/Project 1 mobile:tablet design/gallery-08.css
+++ b/Project 1 mobile:tablet design/gallery-08.css
@@ -9,9 +9,9 @@ body {
     height: 90px;
     overflow: hidden;
     background-color: white;
-    position: relative;
-}
+    position: fixed;
 
+}
 
 .topnav #myLinks {
     position: fixed;
@@ -20,6 +20,8 @@ body {
     margin: 90px 0px 0px 0px;
     background-color: white;
     display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+
 
 }
 
@@ -32,6 +34,7 @@ body {
     font-size: 9px;
     display: block;
     text-align: center;
+    font-family: "Mukta";
 }
 
 
@@ -93,6 +96,7 @@ h2 {
     color: black;
     text-align: left;
     letter-spacing: 3px;
+    font-family: "Source Serif Pro";
 
 }
 
@@ -102,6 +106,7 @@ h3 {
     text-align: left;
     letter-spacing: 3px;
     margin: 25px 0px 0px 0px;
+    font-family:"Karla";
 }
 
 h4 {
@@ -117,6 +122,7 @@ h5 {
     text-align: left;
     letter-spacing: 1.5px;
     margin: 10px 0px 0px 0px;
+    font-family: "Source Serif Pro";
 }
 
 .img1{
@@ -196,12 +202,13 @@ h5 {
 
 .blocks1-info1 {
     grid-area: if-1;
+    padding: 0px 0px 10px 0px;
 }
 
 
 .blocks1-copyright {
     border-top: solid grey;
-    border-width: 1px;
+    border-width: 0.5px;
     text-align: right;
     padding: 40px 0px 0px 0px;
     grid-area: co-1;
