--- a/Project 1 mobile:tablet design/style.css
+++ b/Project 1 mobile:tablet design/style.css
@@ -4,32 +4,40 @@ body {
     padding: 0;
 }
 
+.mySlides {display:none;}
+
+
 .topnav {
     width: 100%;
     height: 90px;
     overflow: hidden;
     background-color: white;
-    position: relative;
+    position: fixed;
+
 }
 
 .topnav #myLinks {
     position: fixed;
     width: 35%;
-    height: 100%;
+    height: 550px;
     margin: -1.5px 0px 0px 0px;
     background-color: white;
     display: none;
-
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+    
 }
+   
 
 .topnav a.text {
     color: black;
     margin-top: 30px;
     padding: 30px 0px -10px 0px;
     text-decoration: none;
-    font-size: 9px;
+    font-size: 10px;
+    font-family: "Mukta";
     display: block;
     text-align: center;
+    
 }
 
 
@@ -63,10 +71,11 @@ a.icon:hover {
     padding: 35px 0px 30px 10px;
     margin: 5px;
     background-color: white;
+    
 }
 
 a:hover {
-    background-color: darkgrey;
+    background-color: white;
     color: black;
 }
 
@@ -108,7 +117,7 @@ a:hover {
 
 
 
-.homepage-image-1 {
+.mySlides {
     width: 100%;
     object-fit: contain;
 }
@@ -120,6 +129,7 @@ h2 {
     margin: 26px 0px 25px 70px;
     letter-spacing: 3.5px;
     font-size: 12px;
+    font-family: "Source Serif Pro";
 }
 
 h1 {
@@ -130,9 +140,10 @@ h1 {
 }
 
 p {
-    font-size: 11px;
+    font-size: 10.5px;
     padding: 0px 70px 30px 70px;
     line-height: 220%;
+    font-family:"Karla";
 }
 
 .biography {
@@ -197,7 +208,7 @@ p {
 
     .topnav #myLinks {
         width: 15%;
-        height: 494px;
+        height: 400px;
         padding: 40px 37px 0px 37px;
         margin: -1.5px 0px 0px 0px;
         background-color: white;
@@ -205,7 +216,7 @@ p {
 
     }
 
-    .homepage-image-1 {
+    .mySlides {
         width: 40%;
         padding: 30px 250px 50px 250px;
         float: center;
@@ -217,6 +228,13 @@ p {
         padding: 2px 0px 0px 20px;
         float: left;
     }
+    
+    p {
+    font-size: 11px;
+    padding: 0px 70px 30px 70px;
+    line-height: 220%;
+    font-family:'Karla';
+}
 
     .biography {
         height: 30vh;
@@ -224,18 +242,18 @@ p {
     }
 
     .facebook {
-        width: 15%;
-        padding: 0px 15px 0px 0px;
+        width: 12%;
+        float: right;
     }
 
     .twitter {
-        width: 30%;
+        width: 24%;
         float: left;
-        padding: 3.5px 15px 0px 0px;
+        padding: 1.5px 0px 0px 10px;
     }
 
     .footer {
-        margin: 30px 60px 0px 50px;
+        margin: 100px 60px 0px 50px;
         padding: 0px 0px 40px 0px;
         border: none;
     }
@@ -246,4 +264,15 @@ p {
     color: gray;
     letter-spacing: 1px;
 }
+}
+
+@media only screen and (min-width:414px) {
+    h1 {
+    text-align: right;
+    font-size: 7px;
+    color: gray;
+    letter-spacing: 1px;
+}
+    
+    
 }
