--- a/event-exhibition.css
+++ b/event-exhibition.css
@@ -1,45 +1,52 @@
 body {
-    width: 100%;
+
     margin: 0;
     padding: 0;
 }
 
 .topnav {
-    height: 150px;
+    width: 100%;
+    height: 90px;
     overflow: hidden;
     background-color: white;
     position: relative;
+
 }
+
 
 .topnav #myLinks {
     position: fixed;
     width: 35%;
-    height: 90%;
-    margin: 150px 0px 0px 0px;
+    height: 100%;
+    margin: 90px 0px 0px 0px;
     background-color: white;
     display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+
 
 }
+
 
 .topnav a.text {
     color: black;
     margin-top: 30px;
-    padding: 30px;
+    padding: 30px 0px -10px 0px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 9px;
     display: block;
     text-align: center;
+    font-family: "Mukta";
 }
 
+
 .topnav a {
-    padding: 13px;
+    padding: 7px;
     text-decoration: none;
-    font-size: 17px;
     display: block;
 }
 
 .topnav a.icon {
-    margin: 57px;
+    margin: 30px 0px 0px 10px;
     background: white;
     display: block;
     position: absolute;
@@ -47,50 +54,68 @@ body {
     top: 0;
 }
 
+
+/*
+.button{
+    float: right;
+    background-color: white;
+    border: none;
+    color: white;
+    padding: 8px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 30px 40px 0px 0px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.button1 {
+  background-color: white;
+  color: grey;
+  border: 1px solid #e7e7e7;
+}
+
+.button1:hover {background-color: #e7e7e7;}
+*/
+
 .active {
     text-align: center;
-    margin: 40px;
+    margin: 25px;
     background-color: white;
     color: black;
 }
 
+.active-1 {
+    width: 40%;
+}
+
 a.icon:hover {
-    margin: 57px;
+    padding: 35px 0px 30px 10px;
+    margin: 5px;
     background-color: white;
 }
 
 a:hover {
-    background-color: darkgray;
+    background-color: darkgrey;
     color: black;
 }
 
 
-/*
-h2 {
-    text-align: left;
-    color: black;
-    margin: 80px 175px 60px 175px;
-    letter-spacing: 4px;
-    font-size: 28px;
-}
 
-h1 {
-    text-align: right;
-    font-size: 17px;
-    color: red;
-    letter-spacing: 1px;
-}
-*/
+
 
 p {
-    font-size: 33px;
+    font-size: 13px;
     line-height: 150%;
-    letter-spacing: 4px;
+    letter-spacing: 1.5px;
+    font-family: "Source Serif Pro";
 }
 
 h1 {
+   padding-top: 10px;
     text-align: right;
-    font-size: 17px;
+    font-size: 7px;
     color: gray;
     letter-spacing: 1px;
 }
@@ -99,39 +124,29 @@ h1 {
 
 h2 {
     text-align: left;
-    font-size: 18px;
+    font-size: 7px;
     color: gray;
     letter-spacing: 2px;
+    font-family:"Karla";
 }
 
-/*
-h3{
-    font-size: 17px;
-    color:gray;
-    text-align: left;
-    letter-spacing: 3px;
-    padding: 0px 0px 34px 0px;
-    border-bottom: solid grey;
-    border-width: 1px;
-}
-*/
 
 h4{
-    font-size: 25px;
-    color:black;
+    font-size: 10px;
+    color:grey;
     text-align: left;
-    letter-spacing: 5px;
+    letter-spacing: 1px;
 }
 
 h5 {
-    font-family:serif;
-    font-size: 30px;
-    line-height: 140%;
-    letter-spacing: 4px;
-    line-height: 180%;
+    font-size: 10.5px;
+    font-family:"Karla";
+    letter-spacing: 0.5px;
+    line-height: 210%;
     padding: 0px 0px 40px 0px;
     border-bottom: solid grey;
     border-width: 1px;
+    
     
 }
 
@@ -139,15 +154,15 @@ h5 {
     height: 100vh;
     background: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1ft;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1ft 1ft;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1ft;
     grid-gap: 10px;
-    margin: 0px 90px 0px 90px;
+    margin: 0px 40px 0px 40px;
     
     
     grid-template-areas:
         " e-1 e-1 . . . . . . . ."
-        " e-2 e-2 e-2 e-2 e-2 . . . . ."
+        " e-2 e-2 e-2 e-2 e-2 e-2 e-2 e-2 e-2 e-2"
         " i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1"
         "i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1 i4-1"
         "e2-2 e2-2 e2-2 e2-2 e2-2 e2-2 . . . ."
@@ -159,7 +174,7 @@ h5 {
         "e2-4 e2-4 e2-4 e2-4 e2-4 e2-4 e2-4 e2-4 e2-4 e2-4"
         
         
-        ". . . . i4-5 i4-5 i4-5 i4-5 i4-5 i4-5"
+        ". . . i4-5 i4-5 i4-5 i4-5 i4-5 i4-5 i4-5"
         ". . . . . . . . . ."
     ;
 
@@ -190,7 +205,7 @@ h5 {
     grid-area: i4-1;
 }
 
-.blocks1-event3{
+.blocks1-date1{
     grid-area: e2-2;
 }
 
@@ -205,7 +220,19 @@ h5 {
 }
 
 .blocks1-copyright{
-    padding: 0px 0px 40px 0px;
+    padding: 0px 0px 20px 0px;
     grid-area: i4-5;
 }
 
+@media only screen and (min-width:768px) {
+
+    .topnav #myLinks {
+        width: 15%;
+        height: 494px;
+        padding: 40px 37px 0px 37px;
+        margin: -1.5px 0px 0px 0px;
+        background-color: white;
+        display: none;
+    }
+    
+    
