--- a/event.css
+++ b/event.css
@@ -1,45 +1,51 @@
 body {
-    width: 100%;
+
     margin: 0;
     padding: 0;
 }
 
 .topnav {
-    height: 150px;
+    width: 100%;
+    height: 90px;
     overflow: hidden;
     background-color: white;
-    position: relative;
+    position: fixed;
+
 }
 
 .topnav #myLinks {
     position: fixed;
     width: 35%;
-    height: 90%;
-    margin: 150px 0px 0px 0px;
+    height: 100%;
+    margin: 90px 0px 0px 0px;
     background-color: white;
     display: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+
 
 }
 
 .topnav a.text {
     color: black;
     margin-top: 30px;
-    padding: 30px;
+    padding: 30px 0px -10px 0px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 10px;
+    font-family: "Mukta";
     display: block;
     text-align: center;
 }
 
+
+
 .topnav a {
-    padding: 13px;
+    padding: 7px;
     text-decoration: none;
-    font-size: 17px;
     display: block;
 }
 
 .topnav a.icon {
-    margin: 57px;
+    margin: 30px 0px 0px 10px;
     background: white;
     display: block;
     position: absolute;
@@ -47,102 +53,82 @@ body {
     top: 0;
 }
 
-.active {
-    text-align: center;
-    margin: 40px;
-    background-color: white;
-    color: black;
-}
+
 
 a.icon:hover {
-    margin: 57px;
+    padding: 35px 0px 30px 10px;
+    margin: 5px;
     background-color: white;
 }
 
 a:hover {
-    background-color: darkgray;
+    background-color: darkgrey;
     color: black;
 }
 
-
-/*
-h2 {
-    text-align: left;
-    color: black;
-    margin: 80px 175px 60px 175px;
-    letter-spacing: 4px;
-    font-size: 28px;
-}
-
-h1 {
-    text-align: right;
-    font-size: 17px;
-    color: red;
-    letter-spacing: 1px;
-}
-*/
 
 p {
-    font-size: 30px;
-    line-height: 130%;
-    letter-spacing: 4px;
+    font-size: 12.8px;
+    line-height: 125%;
+    letter-spacing: 1px;
 }
 
 h1 {
+    padding-top: 10px;
     text-align: right;
-    font-size: 17px;
+    font-size: 7px;
     color: gray;
     letter-spacing: 1px;
 }
 
-h3{
-    font-size: 17px;
-    color:gray;
+h3 {
+    font-size: 7px;
+    color: gray;
     text-align: left;
     letter-spacing: 3px;
-    padding: 0px 0px 34px 0px;
+    padding: 0px 0px 25px 0px;
     border-bottom: solid grey;
-    border-width: 1px;
+    border-width: .5px;
+    font-family:"Karla";
 }
 
-h4{
-    font-size: 58px;
-    color:black;
+h4 {
+    font-size: 20px;
+    color: black;
     text-align: left;
     letter-spacing: 5px;
+    font-family: "Source Serif Pro";
+    
 }
 
 .events {
     height: 100vh;
     background: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1ft;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1ft;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-    margin: 0px 90px 0px 90px;
-    
-    
+    padding: 0px 45px 0px 45px;
+
+
     grid-template-areas:
         " e-1 e-1 . . . . . . . ."
         " e-2 e-2 e-2 e-2 e-2 . . . . ."
         " d-3 d-3 d-3 d-3 d-3 d-3 d-3 d-3 d-3 d-3"
-        
+
         "e2-1 e2-1 e2-1 e2-1 e2-1 .    i4-1 i4-1 i4-1 i4-1"
         "d3-1 d3-1 d3-1 d3-1 d3-1 d3-1 d3-1 d3-1 d3-1 d3-1"
-        
+
         "e2-2 e2-2 e2-2 e2-2 e2-2 e2-2    i4-2 i4-2 i4-2 i4-2"
         ". . . . . . i4-2 i4-2 i4-2 i4-2"
         "d3-2 d3-2 d3-2 d3-2 d3-2 d3-2 d3-2 d3-2 d3-2 d3-2"
-        
+
         "e2-4 e2-4 e2-4 e2-4 e2-4 .    i4-4 i4-4 i4-4 i4-4"
         ". . . . . . i4-4 i4-4 i4-4 i4-4"
         "d3-4 d3-4 d3-4 d3-4 d3-4 d3-4 d3-4 d3-4 d3-4 d3-4"
-        
-        
-        ". . . . i4-5 i4-5 i4-5 i4-5 i4-5 i4-5"
-        ". . . . . . . . . ."
-        ". . . . . . . . . ."
-        ". . . . . . . . . ."
+
+
+        ". . . i4-5 i4-5 i4-5 i4-5 i4-5 i4-5 i4-5"
     ;
 
 
@@ -152,72 +138,126 @@ h4{
     background-color: white;
 }
 
-.blocks1 a{
+.blocks1 a {
     text-decoration: none;
-    color: red;
+    color: black;
 }
 
-.blocks1-event{
+.blocks1-event {
     grid-area: e-1;
 }
 
-.blocks1-event1{
+.blocks1-event1 {
     grid-area: e-2;
 }
 
-.blocks1-date1{
+.blocks1-date1 {
     grid-area: d-3;
 }
 
-.blocks1-img1{
-     grid-area: i-4;
+.blocks1-img1 {
+    grid-area: i-4;
 }
 
-.blocks1-event2{
+.blocks1-event2 {
     grid-area: e2-1;
 }
 
-.blocks1-date2{
+.blocks1-date2 {
     grid-area: d3-1;
 }
 
-.blocks1-img2{
-    padding: 30px 0px 0px;
+.blocks1-img2 {
+    margin: 10px 0px 0px 0px;
+    padding: 0px 20px 0px 0px;
     grid-area: i4-1;
 }
 
-.blocks1-event3{
+.blocks1-event3 {
     grid-area: e2-2;
 }
 
-.blocks1-date3{
+.blocks1-date3 {
     padding: 30px 0px 0px;
     grid-area: d3-2;
 }
 
-.blocks1-img3{
+.blocks1-img3 {
+    padding: 20px 20px 0px 0px;
     align-items: center;
-    padding: 0px 0px 30px 0px;
     grid-area: i4-2;
 }
 
-.blocks1-event4{
+.blocks1-event4 {
     grid-area: e2-4;
 }
 
-.blocks1-date4{
+.blocks1-date4 {
     grid-area: d3-4;
 }
 
-.blocks1-img4{
-    padding: 30px 0px 0px 0px;
+.blocks1-img4 {
     grid-area: i4-4;
 }
 
-.blocks1-copyright{
-    padding: 0px 0px 40px 0px;
+.blocks1-copyright {
+    padding: 0px 0px 20px 0px;
     grid-area: i4-5;
 }
 
+.im1 {
+    width: 100%;
+}
+
+.im2 {
+    width: 100%;
+
+}
+
+.im3 {
+
+    width: 85%;
+}
+
+@media only screen and (min-width:768px) {
 
 
+
+    .topnav #myLinks {
+        width: 15%;
+        height: 494px;
+        padding: 40px 37px 0px 37px;
+        margin: -1.5px 0px 0px 0px;
+        background-color: white;
+        display: none;
+
+    }
+
+
+    .im1 {
+        padding: 0px 20px 0px 0px;
+        float: right;
+        width: 50%;
+    }
+
+    .im2 {
+        padding: 0px 30px 0px 0px;
+        float: right;
+        width: 40%;
+    }
+
+    .im3 {
+        padding: 0px 50px 0px 0px;
+        float: right;
+        width: 35%;
+    }
+
+    h3 {
+        font-size: 7.5px;
+    }
+
+    h1 {
+        font-size: 8px;
+    }
+
+}
